Add many more mathematical and technical letter-like symbols
Notable changes in this patch:
* Add lots of symbols that look like E, O, or T.
* Add brackets of all kinds.

This follows mostly what is written in the Unicode charts, as well
as my best judgment based on how a symbol looks like. Please feel
free to discuss.

Change-Id: I23d57f4f93fe424dfa71a3249ad7b4d65baa6f1e

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -2245,6 +2245,19 @@ F0C ༌ => F0B ་
 200D ‍ => invisible
 200E ‎ => invisible
 200F ‏ => invisible
+2010 ‐ => 2D -
+2012 ‒ => 2D -
+2013 – => 2D -
+2014 — => 2D -
+2015 ― => 2D -
+2018 ‘ => 27 '
+2019 ’ => 27 '
+201A ‚ => 2C ,
+201B ‛ => 2018 ‘
+201C “ => 22 "
+201D ” => 22 "
+201E „ => 22 "
+201F ‟ => 201C “
 2028   => invisible
 2029   => invisible
 202A ‪ => invisible
@@ -2253,13 +2266,22 @@ F0C ༌ => F0B ་
 202D ‭ => invisible
 202E ‮ => invisible
 202F   => space
+2032 ′ => 27 '
+2033 ″ => 22 "
+2035 ‵ => 60 `
+2036 ‶ => 22 "
+2039 ‹ => 3C <
+203A › => 3E >
 203D ‽ => 3F ?
+2044 ⁄ => 2F /
 2045 ⁅ => 5B [
 2046 ⁆ => 5D ]
 2047 ⁇ => 3F ?
 2048 ⁈ => 203D ‽
 2049 ⁉ => 203D ‽
 204A ⁊ => 2E52 ⹒
+204B ⁋ => 50 P
+2053 ⁓ => 7E ~
 205F   => space
 2060 ⁠ => invisible
 2061 ⁡ => invisible
@@ -2448,16 +2470,71 @@ F0C ༌ => F0B ་
 220D ∍ => 3F6 ϶
 220F ∏ => 3A0 Π
 2211 ∑ => 3A3 Σ
+2215 ∕ => 2F /
+2216 ∖ => 5C \
 2218 ∘ => BA º
 221D ∝ => 3B1 α
 2227 ∧ => 28C ʌ
 2228 ∨ => 76 v
 2229 ∩ => 6E n
 222A ∪ => 55 U
+223C ∼ => 7E ~
+227A ≺ => 3C <
+227B ≻ => 3E >
+2298 ⊘ => 2205 ∅
+229D ⊝ => 29B5 ⦵
+22A4 ⊤ => 54 T
 22C0 ⋀ => 2227 ∧
 22C1 ⋁ => 2228 ∨
 22C2 ⋂ => 2229 ∩
 22C3 ⋃ => 222A ∪
+22D5 ⋕ => 23 #
+22D6 ⋖ => 3C <
+22D7 ⋗ => 3E >
+22F2 ⋲ => 2208 ∈
+22F3 ⋳ => 2208 ∈
+22F4 ⋴ => 22F3 ⋳
+22F5 ⋵ => 2208 ∈
+22F6 ⋶ => 2208 ∈
+22F7 ⋷ => 22F6 ⋶
+22F8 ⋸ => 2208 ∈
+22F9 ⋹ => 2208 ∈
+22FA ⋺ => 220B ∋
+22FB ⋻ => 220B ∋
+22FC ⋼ => 22FB ⋻
+22FD ⋽ => 220B ∋
+22FE ⋾ => 22FD ⋽
+22FF ⋿ => 45 E
+
+# Miscellaneous Technical
+# Range: 2300–23FF
+# https://www.unicode.org/charts/PDF/U2300.pdf
+2300 ⌀ => 2205 ∅
+2317 ⌗ => 23 #
+2329 〈 => 3C <
+232A 〉 => 3E >
+2336 ⌶ => 49 I
+233D ⌽ => 29B6 ⦶
+2349 ⍉ => 29B0 ⦰
+234B ⍋ => 394 Δ
+234D ⍍ => 394 Δ
+2351 ⍑ => 22A4 ⊤
+2359 ⍙ => 394 Δ
+2361 ⍡ => 22A4 ⊤
+2365 ⍥ => D6 Ö
+236C ⍬ => 30 0
+2370 ⍰ => 3F ?
+2373 ⍳ => 3B9 ι
+2374 ⍴ => 3C1 ρ
+2375 ⍵ => 3C9 ω
+2376 ⍶ => 237A ⍺
+2377 ⍷ => 3B5 ε
+2378 ⍸ => 2373 ⍳
+2379 ⍹ => 2375 ⍵
+237A ⍺ => 3B1 α
+23C0 ⏀ => 233D ⌽
+23C9 ⏉ => 22A4 ⊤
+23FC ⏼ => 29B6 ⦶
 
 # Enclosed Alphanumerics
 # Range: 2460–24FF
@@ -2612,6 +2689,12 @@ F0C ༌ => F0B ་
 24FE ⓾ => 2469 ⑩
 24FF ⓿ => 24EA ⓪
 
+# Geometric Shapes
+# Range: 25A0–25FF
+# https://www.unicode.org/charts/PDF/U25A0.pdf
+25CB ○ => 30 0
+25EF ◯ => 25CB ○
+
 # Dingbats
 # Range: 2700–27BF
 # https://www.unicode.org/charts/PDF/U2700.pdf
@@ -2648,6 +2731,21 @@ F0C ༌ => F0B ་
 2792 ➒ => 277E ❾
 2793 ➓ => 277F ❿
 
+# Miscellaneous Mathematical Symbols-A
+# Range: 27C0–27FF
+# https://www.unicode.org/charts/PDF/U27C0.pdf
+27CB ⟋ => 2215 ∕
+27CD ⟍ => 2216 ∖
+27D9 ⟙ => 22A4 ⊤
+27E6 ⟦ => 5B [
+27E7 ⟧ => 5D ]
+27E8 ⟨ => 2329 〈
+27E9 ⟩ => 232A 〉
+27EC ⟬ => 2997 ⦗
+27ED ⟭ => 2998 ⦘
+27EE ⟮ => 28 (
+27EF ⟯ => 29 )
+
 # Miscellaneous Mathematical Symbols-B
 # Range: 2980–29FF
 # https://www.unicode.org/charts/PDF/U2980.pdf
@@ -2659,12 +2757,32 @@ F0C ༌ => F0B ་
 298E ⦎ => 5D ]
 298F ⦏ => 5B [
 2990 ⦐ => 5D ]
+2991 ⦑ => 2329 〈
+2992 ⦒ => 232A 〉
 2993 ⦓ => 3C <
 2994 ⦔ => 3E >
 2995 ⦕ => 3E >
 2996 ⦖ => 3C <
+2997 ⦗ => 3014 〔
+2998 ⦘ => 3015 〕
+29B0 ⦰ => 2205 ∅
+29B1 ⦱ => 2205 ∅
+29B2 ⦲ => 2205 ∅
+29B3 ⦳ => 2205 ∅
+29B4 ⦴ => 2205 ∅
+29B5 ⦵ => 3B8 θ
+29B6 ⦶ => 3D5 ϕ
+29B8 ⦸ => 29B0 ⦰
+29BD ⦽ => 29B6 ⦶
+29E3 ⧣ => 23 #
+29E4 ⧤ => 29E3 ⧣
 29F5 ⧵ => 5C \
+29F6 ⧶ => 2F /
+29F7 ⧷ => 29F5 ⧵
+29F8 ⧸ => 2215 ∕
 29F9 ⧹ => 29F5 ⧵
+29FC ⧼ => 2329 〈
+29FD ⧽ => 232A 〉
 
 # Latin Extended-C
 # Range: 2C60–2C7F
@@ -2824,7 +2942,28 @@ F0C ༌ => F0B ་
 # CJK Symbols and Punctuation
 # Range: 3000–303F
 # https://www.unicode.org/charts/PDF/U3000.pdf
+3001 、 => 2C ,
+3002 。 => 2E .
+3003 〃 => 22 "
 3007 〇 => 30 0
+3008 〈 => 2329 〈
+3009 〉 => 232A 〉
+3014 〔 => 5B [
+3015 〕 => 5D ]
+3018 〘 => 3014 〔
+3019 〙 => 3015 〕
+301A 〚 => 27E6 ⟦
+301B 〛 => 27E7 ⟧
+301C 〜 => 7E ~
+301D 〝 => 201C “
+301E 〞 => 201D ”
+301F 〟 => 201E „
+3021 〡 => 2160 Ⅰ
+3022 〢 => 2161 Ⅱ
+3023 〣 => 2162 Ⅲ
+3038 〸 => 5341 十
+3039 〹 => 5344 卄
+303A 〺 => 5345 卅
 
 # Hiragana
 # Range: 3040–309F
