Map identical "final" and "initial" forms in the Hangul range
Hangul is the writing system used in Korea. It uses very basic
shapes like ᄀ, ᅭ , and ᆺ  that can be put together to make e.g. 굣.
Some of the shapes appear twice in the range because they can be
used in the upper or lower half of the final syllable.

Change-Id: I97c5926fb02f4e3cc2d970664fdb8931243e0915

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -1304,6 +1304,51 @@ F0C ༌ => F0B ་
 # https://www.unicode.org/charts/PDF/U1100.pdf
 115F ᅟ => space
 1160 ᅠ => space
+11A8 ᆨ => 1100 ᄀ
+11A9 ᆩ => 1101 ᄁ
+11AB ᆫ => 1102 ᄂ
+11AC ᆬ => 115C ᅜ
+11AD ᆭ => 115D ᅝ
+11AE ᆮ => 1103 ᄃ
+11AF ᆯ => 1105 ᄅ
+11B6 ᆶ => 111A ᄚ
+11B7 ᆷ => 1106 ᄆ
+11B8 ᆸ => 1107 ᄇ
+11B9 ᆹ => 1121 ᄡ
+11BA ᆺ => 1109 ᄉ
+11BB ᆻ => 110A ᄊ
+11BC ᆼ => 110B ᄋ
+11BD ᆽ => 110C ᄌ
+11BE ᆾ => 110E ᄎ
+11BF ᆿ => 110F ᄏ
+11C0 ᇀ => 1110 ᄐ
+11C1 ᇁ => 1111 ᄑ
+11C2 ᇂ => 1112 ᄒ
+11C5 ᇅ => 1113 ᄓ
+11C6 ᇆ => 1115 ᄕ
+11C7 ᇇ => 115B ᅛ
+11CA ᇊ => 1117 ᄗ
+11CB ᇋ => 115E ᅞ
+11CD ᇍ => 1118 ᄘ
+11D0 ᇐ => 1119 ᄙ
+11DC ᇜ => 111C ᄜ
+11E2 ᇢ => 111D ᄝ
+11E4 ᇤ => 112A ᄪ
+11E6 ᇦ => 112B ᄫ
+11E7 ᇧ => 112D ᄭ
+11E8 ᇨ => 112F ᄯ
+11E9 ᇩ => 1130 ᄰ
+11EA ᇪ => 1132 ᄲ
+11EB ᇫ => 1140 ᅀ
+11EC ᇬ => 1141 ᅁ
+11EE ᇮ => 1147 ᅇ
+11F0 ᇰ => 114C ᅌ
+11F1 ᇱ => 1145 ᅅ
+11F2 ᇲ => 1146 ᅆ
+11F3 ᇳ => 1156 ᅖ
+11F4 ᇴ => 1157 ᅗ
+11F9 ᇹ => 1159 ᅙ
+11FF ᇿ => 1114 ᄔ
 
 # Cherokee
 # Range: 13A0–13FF
@@ -2932,7 +2977,7 @@ F0C ༌ => F0B ་
 3161 ㅡ => 1173 ᅳ
 3162 ㅢ => 1174 ᅴ
 3163 ㅣ => 1175 ᅵ
-3164 ㅤ => 1160 ᅠ
+3164 ㅤ => space
 3165 ㅥ => 1114 ᄔ
 3166 ㅦ => 1115 ᄕ
 3167 ㅧ => 11C7 ᇇ
