Add two more main authors to composer.json
We did so much the past months, I think it's fair when our names are
added.

Also:
* Update B. Vibber's name.
* Add a .mailmap to make sure we use the canonical names of the
  authors as well as merge entries when they used different emails.
* Fix smaller details in the README.

Change-Id: I50315e138537aec5c7dd8f6d8248f51fc71caaed

--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,20 @@
 	"homepage": "https://www.mediawiki.org/wiki/Equivset",
 	"authors": [
 		{
-			"name": "Brion Vibber",
+			"name": "Brooke Vibber",
 			"email": "bvibber@wikimedia.org"
 		},
 		{
 			"name": "David Barratt",
 			"email": "dbarratt@wikimedia.org"
+		},
+		{
+			"name": "Thiemo Kreuz",
+			"email": "thiemo.kreuz@wikimedia.de"
+		},
+		{
+			"name": "Umherirrender",
+			"email": "umherirrender_de.wp@web.de"
 		}
 	],
 	"autoload": {
