Add format controls from Mongolian range as invisible
Change-Id: I63f8f0ff767840336416de3de3e6f69b1d09189d

--- a/data/equivset.in
+++ b/data/equivset.in
@@ -1499,6 +1499,11 @@ F0C ༌ => F0B ་
 # Mongolian
 # Range: 1800–18AF
 # https://www.unicode.org/charts/PDF/U1800.pdf
+180B ᠋ => invisible
+180C ᠌ => invisible
+180D ᠍ => invisible
+180E ᠎ => invisible
+180F ᠏ => invisible
 1810 ᠐ => 30 0
 1896 ᢖ => 185C ᡜ
 
