--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,8 @@
 		"php-parallel-lint/php-parallel-lint": "1.4.0",
 		"phpunit/phpunit": "9.6.21",
 		"rregeer/phpunit-coverage-check": "~0.3.1",
-		"symfony/console": "^3.3 || ^4 || ^5 || ^6",
-		"symfony/var-dumper": "^3.3 || ^4 || ^5 || ^6"
+		"symfony/console": "^5 || ^6 || ^7",
+		"symfony/var-dumper": "^5 || ^6 || ^7"
 	},
 	"scripts": {
 		"test": [
